fix: refactor Eval method